<resources>
    <string name="app_name">ConoceteSinPenaPrueba1</string>
    <string name="btn_inicio">INGRESAR</string>
    <string name="btn_registro">CREAR UNA CUENTA</string>
    <string name="btn_registrar">GENERAR CUENTA</string>
    <string name="btn_anatomia">ANATOMÍA BÁSICA</string>
    <string name="btn_sexualidad">SEXUALIDAD</string>
    <string name="btn_tabus">TABÚS Y MITOS</string>
    <string name="btn_contacto">Contacto con el desarrollador</string>
    <string name="btn_salir">Volver</string>
    <string name="ingresa_tus_datos_para_iniciar_sesi_n">Ingresa tus datos para iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="leyenda1">Aún no tienes cuenta, da click en el siguiente botón</string>
    <string name="btn_audio">Comercial</string>
    <string name="ins1">Toca la imagen de cada método anticonceptivo para ver una breve descripción</string>
    <string name="ins2">Desliza hacia abajo para conocer otros métodos</string>
    <string name="antM_parrafo1">Anatomía Mujer</string>
    <string name="antM_parrafo2">Las mujeres tienen algunos órganos sexuales que se ven a simple vista (externos) y otros que están dentro del cuerpo (internos).</string>
    <string name="antM_parrafo3">Órganos genitales externos</string>
    <string name="antM_parrafo4">Entre las piernas y por debajo del pubis (donde está el vello) se encuentra la vulva. La vulva está formada por dos pares de repliegues o labios: los más grandes y más externos son los labios mayores. Por debajo de estos labios mayores se encuentran los labios menores. En el punto en donde se unen los labios menores está el clítoris, un pequeño órgano muy sensible, importante en la generación del orgasmo (momento de máximo placer sexual) femenino. También en la vulva se encuentra el orificio de la uretra, por donde sale la orina, ubicado entre el clítoris y la vagina.</string>
    <string name="antM_parrafo5">Los senos, de distinta forma y tamaño en cada mujer, presentan en su zona central un círculo más oscuro formado por la areola y el pezón. En el interior hay glándulas productoras de leche y tejido graso.</string>
    <string name="antM_parrafo6">Órganos genitales internos</string>
    <string name="antM_parrafo7">Por debajo de los labios menores se encuentra la entrada de la vagina. El himen es una membrana con un pequeño orificio, que cubre parcialmente la entrada de la vagina. En algunas mujeres puede sangrar durante la primera penetración vaginal. La vagina es un canal muy elástico, se agranda en el parto, y durante la penetración sexual se adapta al tamaño del pene. Se comunica internamente con el útero o matriz, que es el lugar donde se anida el feto en el embarazo. </string>
    <string name="antM_parrafo8">El útero es un órgano formado por músculos, del tamaño y la forma de una pera invertida. La parte más estrecha del útero recibe el nombre de cuello del útero, presenta un orificio pequeño que lo comunica con la vagina. Por allí sale la menstruación, es el canal por donde ascienden los espermatozoides y por donde pasa el bebé en el momento del parto.</string>
    <string name="antM_parrafo9">Del fondo del útero salen dos canales, las trompas de Falopio, que terminan en un extremo ensanchado junto a cada ovario. En los ovarios maduran los óvulos y se producen, además, hormonas femeninas. Los óvulos son las células femeninas para la reproducción. Si un óvulo es fecundado por una célula masculina puede dar lugar a un embarazo.</string>
    <string name="antH_parrafo1">Anatomía hombre</string>
    <string name="antH_parrafo2">El varón también tiene órganos sexuales que se ven a simple vista (externos) y otros que están dentro de su cuerpo (internos).</string>
    <string name="antH_parrafo3">Órganos genitales externos</string>
    <string name="antH_parrafo4">Estos órganos son el pene y el escroto. El pene es un órgano cuyo tamaño puede variar de un varón a otro sin que ello indique diferencias en la virilidad o en la potencia sexual. Está cubierto por una piel delgada que en la punta forma un pliegue (prepucio). La parte más sensible de este órgano es la cabeza o punta (glande), donde se encuentra un orificio a través del cual salen la orina y el semen, pero nunca al mismo tiempo. El semen o esperma es el líquido que sale del pene en el momento de la eyaculación y transporta los espermatozoides. El escroto es una bolsa doble, rugosa, ubicada debajo del pene, que contiene los testículos. </string>
    <string name="antH_parrafo5">Órganos genitales internos</string>
    <string name="clm_p3">¿Cómo se contagia?</string>
    <string name="clm_p5">Síntomas</string>
    <string name="gn_p1">¿Qué es la gonorrea?</string>
    <string name="gn_p2">La gonorrea es una enfermedad de transmisión sexual muy común, que afecta especialmente a adolescentes y personas entre los 20 y 30 años.La gonorrea se transmite a través del sexo vaginal, anal y oral. La bacteria se encuentra en el semen (leche), en el líquido preeyaculatorio y en los fluidos vaginales. La gonorrea puede infectar tu pene, vagina, cuello uterino, ano, uretra, garganta y ojos (aunque esto es poco común).</string>
    <string name="gn_p3">Las personas se contagian de gonorrea por tener sexo sin protección con alguien que tiene la infección. La gonorrea se transmite (pega) cuando el semen (leche), el líquido preeyaculatorio (líquido que sale antes de eyacular o llegar), y los fluidos vaginales entran en contacto con tus genitales, tu ano o tu boca, o cuando entran en estos. La gonorrea se puede transmitir aún si el pene no entra completamente en la vagina o el ano</string>
    <string name="gn_p4">La gonorrea se cura fácilmente con antibióticos. Pero si no tratas la infección a tiempo, aparecerán problemas más graves de salud en el futuro. Por eso es tan importante hacerse pruebas de las enfermedades de transmisión sexual (ETS).</string>
    <string name="gn_p5">La mayoría de las personas con vagina que se contagian de gonorrea no tienen síntomas. Si los tienen, los síntomas de la gonorrea aparecen más o menos una semana después de haberse contagiado de la infección. Estos incluyen:</string>
    <string name="gn_p6">* Dolor o ardor al orinar</string>
    <string name="gn_p7">* Flujo vaginal anormal que puede ser amarillento o con sangre</string>
    <string name="gn_p8">* Sangrado entre periodos</string>
    <string name="gn_p9">Usualmente, los síntomas aparecen durante la semana después de haberse contagiado. Los síntomas de la gonorrea en las personas con pene incluyen:</string>
    <string name="gn_p10">* Flujo amarillo, blanco o verde del pene</string>
    <string name="gn_p11">* Dolor o ardor al orinar</string>
    <string name="gn_p12">* Dolor o hinchazón en los testículos (huevos)</string>
    <string name="gn_p13">La gonorrea también puede infectar el ano si tienes sexo anal y también puedes pasarla a tu ano desde otra parte de tu cuerpo. La gonorrea anal suele no tener síntomas. Sin embargo, las señales de la gonorrea en el ano pueden incluir:</string>
    <string name="gn_p14">* Picazón en, o alrededor del ano</string>
    <string name="gn_p15">* Flujo del ano</string>
    <string name="gn_p16">* Dolor al defecar (hacer popó)</string>
    <string name="gn_p17">Es poco común que las personas con infección de gonorrea en la garganta tengan síntomas. Cuando aparece alguno, usualmente es solo dolor de garganta.</string>
    <string name="gn_p18"> Usar condones y/o barreras de látex bucales cada vez que tengas sexo, es la mejor manera de prevenir la gonorrea, incluso si tú y tu pareja sexual parecen estar perfectamente bien de salud.</string>
    <string name="vh_p1">¿Qué es el VIH Y el SIDA?</string>
    <string name="vh_p2">El VIH y el SIDA no son lo mismo.</string>
    <string name="vh_p3">El VIH es un virus que se transmite de persona a persona. Con el tiempo, el VIH destruye un tipo de células importante del sistema inmunitario (llamadas células CD4 o células T), que es el que nos protege de las infecciones. Cuando no tienes suficientes células CD4, tu cuerpo no puede combatir las infecciones como lo haría normalmente.</string>
    <string name="vh_p4">El SIDA es la enfermedad causada por el daño que el VIH hace en el sistema inmunitario. Una persona tiene SIDA cuando contrae infecciones peligrosas o tiene un número muy bajo de células CD4. El SIDA es la fase más grave del VIH y con el tiempo, termina provocando la muerte.</string>
    <string name="vh_p5">Para que alguien con VIH desarrolle el SIDA, generalmente se tarda 10 años si no recibe tratamiento. El tratamiento hace que el daño que causa el virus sea más lento y puede ayudar a que las personas se mantengan sanas durante mucho años.</string>
    <string name="vh_p6">El VIH se encuentra en el semen (leche), los fluidos vaginales, el moco anal, la sangre y la leche humana. El virus entra a tu cuerpo a través de cortes o heridas en la piel y a través de las membranas mucosas (como el interior de la vagina, el recto y la abertura del pene). Te puedes contagiar del VIH por:</string>
    <string name="vh_p7">* Tener sexo vaginal o anal</string>
    <string name="vh_p8">* Compartir agujas o jeringas para inyectarse drogas, hacerse perforaciones en el cuerpo (piercings), tatuajes, etc.</string>
    <string name="vh_p9">* Que te pinchen con una aguja que tiene sangre infectada con el VIH</string>
    <string name="vh_p10">* Tener heridas o ampollas abiertas que entren en contacto con sangre, semen (leche) o fluidos vaginales infectados con el VIH</string>
    <string name="vh_p11">El VIH usualmente se transmite cuando tienes sexo sin protección. Usar condones y/o barreras de látex bucales cada vez que tengas sexo y no compartir agujas, te ayuda a protegerte -y a tus parejas-. Si tienes VIH, recibir tratamiento puede bajar e incluso detener tus chances de contagiar a otras personas con el virus durante el sexo. Si no tienes VIH, también hay un medicamento de uso diario (te lo tomas todos los días) llamado PrEP, que puede protegerte del VIH.</string>
    <string name="vh_p12">Las primeras 2 a 4 semanas después de contagiarte de VIH, puedes sentir algo de fiebre, dolor y malestar. Estos síntomas -similares a los de la gripe-, son la primera reacción de tu cuerpo a la infección. Los síntomas del SIDA incluyen:</string>
    <string name="vh_p13">Aftas (una capa espesa y blanca en tu lengua o boca)</string>
    <string name="vh_p14">* Dolor de garganta</string>
    <string name="vh_p15">* Infecciones por hongos fuertes</string>
    <string name="vh_p16">* Enfermedad pélvica inflamatoria crónica</string>
    <string name="vh_p17">* Tener infecciones fuertes muy seguido</string>
    <string name="vh_p18">* Sentir mucho cansancio, mareos y aturdimiento</string>
    <string name="vh_p19">* Dolores de cabeza</string>
    <string name="vh_p20">* Perder mucho peso rápidamente</string>
    <string name="vh_p21">* Tener moretones con más facilidad de lo normal para ti</string>
    <string name="vh_p22">* Diarrea, fiebre o sudores nocturnos durante mucho tiempo</string>
    <string name="vh_p23">* Glándulas inflamadas o duras en tu garganta, axilas o ingle</string>
    <string name="vh_p24">* Episodios de tos seca y profunda</string>
    <string name="vh_p25">* Sensación de falta de aire</string>
    <string name="vh_p26">* Bultos o manchas color violeta o azul en tu piel o boca</string>
    <string name="vh_p27">* Sangrado de la boca, la nariz, el ano o la vagina</string>
    <string name="vh_p29">* Erupciones en la piel</string>
    <string name="vh_p30">* Sentir las manos o los pies dormidos, perder el control de tus músculos y reflejos, no poder moverte y perder fuerza en tus músculos</string>
</resources>