<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogeneral"
    tools:context=".vih">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00AA8B8B"
                android:onClick="volver"
                app:srcCompat="@drawable/btnretorno" />

            <TextView
                android:id="@+id/textView113"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p1"
                android:textColor="#000000"
                android:textSize="48sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="match_parent"
                android:layout_height="243dp"
                app:srcCompat="@drawable/vih1" />

            <TextView
                android:id="@+id/textView114"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p2"
                android:textColor="#a5073c"
                android:textSize="24sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView115"
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p3"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView116"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p4"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView117"
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p5"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView119"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/clm_p3"
                android:textColor="#0f26a6"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p6"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView120"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p7"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p8"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView122"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p9"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView123"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p10"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView124"
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p11"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="match_parent"
                android:layout_height="243dp"
                app:srcCompat="@drawable/vih2" />

            <TextView
                android:id="@+id/textView125"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/clm_p5"
                android:textColor="#a5273c"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView126"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p12"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView127"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p13"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView128"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p14"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView129"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p15"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView130"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p16"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView131"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p17"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView132"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p18"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView133"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p19"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView134"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p20"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView135"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p21"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView136"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p22"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView137"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p23"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView138"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p24"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView139"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p25"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView140"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p26"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView141"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p27"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView142"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p29"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView143"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/vh_p30"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>