<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogeneral"
    tools:context=".gonorrea">

    <ScrollView
        android:layout_width="313dp"
        android:layout_height="722dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#008F8181"
                android:onClick="volver"
                app:srcCompat="@drawable/btnretorno" />

            <TextView
                android:id="@+id/textView64"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p1"
                android:textColor="#000000"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p2"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="243dp"
                app:srcCompat="@drawable/gonorrea1" />

            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/clm_p3"
                android:textColor="#0f2646"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="267dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p3"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p4"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="243dp"
                app:srcCompat="@drawable/gonorrea2" />

            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/clm_p5"
                android:textColor="#a5073c"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="156dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p5"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p6"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p7"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView73"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p8"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView74"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p9"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView75"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p10"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView76"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p11"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView77"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p12"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView78"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p13"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView79"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p14"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p15"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView81"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p16"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView82"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p17"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView83"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:fontFamily="@font/letralogo"
                android:text="@string/gn_p18"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>